tests/positive/pr118c_binary_case_dispatch.safe
package pr118c_binary_case_dispatch

   type opcode is binary (8)

   function render (code : opcode) returns integer

      case code
         when opcode (0)
            return 0

         when opcode (1)
            return 1

         when others
            return 255

